--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: MyAuth
-main: com.creator12.xauth.xAuth
-version: 2.0b4.3
+main: com.creator12.MyAuth.MyAuth
+version: 1.0-R0.2
 description: Offline-Mode Security Suite
 author: creator12
 commands:
